--- a/source/pages/website/landing-page.pug
+++ b/source/pages/website/landing-page.pug
@@ -10,7 +10,7 @@ block content
   main.landing-page
     .landing-page__container
       .landing-page__item
-        +card-search({})
+        +card-search({ formAction: '#mock-address' })
       .landing-page__item
         p.landing-page__text
           | Лучшие номера для вашей работы, отдыха и просто вдохновения
