--- a/source/blocks/card-signin/card-signin.pug
+++ b/source/blocks/card-signin/card-signin.pug
@@ -1,7 +1,7 @@
 include ../../blocks/input-field/input-field.pug
 include ../../blocks/button/button.pug
 
-mixin card-signin({ titleText='Войти' })
+mixin card-signin({ formAction='#mock-address', titleText='Войти', signupHref='#mock-address' })
   -
     const blockName = 'card-signin';
     const wrapperClass = [blockName];
@@ -9,7 +9,7 @@ mixin card-signin({ titleText='Войти' })
     const formItemClass = [`${blockName}__form-item`];
 
   div(class=wrapperClass)
-    form(class=formClass, action='#mock-address', method='post')
+    form(class=formClass, action=formAction, method='post')
       h1(class=`${blockName}__title`) #{titleText}
       div(class=formItemClass)
         div(class=`${blockName}__form-subitem`)
@@ -21,4 +21,4 @@ mixin card-signin({ titleText='Войти' })
     div(class=`${blockName}__footer`)
       span(class=`${blockName}__footer-text`) Нет аккаунта на Toxin?
       span(class=`${blockName}__footer-button`)
-        +button({ btnType: 'link', btnText: 'Создать', btnStyle: 'ghost' })(href='#mock-address')
+        +button({ btnType: 'link', btnText: 'Создать', btnStyle: 'ghost' })(href=signupHref)
