--- a/source/styles/style.scss
+++ b/source/styles/style.scss
@@ -10,6 +10,8 @@
 @import '../pages/ui-kit/headers-footers';
 
 @import '../pages/website/landing-page';
+@import '../pages/website/registration';
+@import '../pages/website/sign-in';
 @import '../pages/website/search-room';
 
 @import '../blocks/input-field/input-field';
