--- a/source/blocks/carousel/carousel.scss
+++ b/source/blocks/carousel/carousel.scss
@@ -5,6 +5,7 @@
   overflow: hidden;
 
   &__images {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,7 +16,9 @@
 
   &__image {
     position: absolute;
+    width: 100%;
     height: 100%;
+    object-fit: cover;
     opacity: 0;
     transition: all 0.3s ease-in-out;
 
@@ -72,6 +75,10 @@
         transform: rotate(-90deg);
       }
     }
+
+    &_hidden {
+      display: none;
+    }
   }
 
   &__indicators {
@@ -102,6 +109,10 @@
       &:hover {
         opacity: 1;
       }
+    }
+
+    &_hidden {
+      display: none;
     }
   }
 }
