--- a/source/blocks/list-checkbox/list-checkbox.scss
+++ b/source/blocks/list-checkbox/list-checkbox.scss
@@ -25,7 +25,8 @@
 
   &__icon {
     display: inline-block;
-    margin-right: 0.5rem;
+    width: 4.4rem;
+    text-align: center;
     color: $color_main-50;
     transition: transform 0.3s ease-in-out;
 
