--- a/source/blocks/pagination/pagination.scss
+++ b/source/blocks/pagination/pagination.scss
@@ -4,16 +4,18 @@
   justify-content: center;
   align-items: center;
 
-  &__pages {
+  &__buttons {
     margin-bottom: 1.4rem;
   }
 
-  &__page {
+  &__button-page {
     display: inline-flex;
     justify-content: center;
     align-items: center;
     width: 4rem;
     height: 4rem;
+    background: none;
+    border: 0;
     border-radius: 50%;
     color: $color_main-50;
     font-family: $font-family_h3;
@@ -21,6 +23,7 @@
     text-decoration: none;
     user-select: none;
     outline: none;
+    cursor: pointer;
 
     &:focus {
       box-shadow: 0 0 0.5rem $color_prim;
