--- a/source/blocks/list-checkbox/list-checkbox.scss
+++ b/source/blocks/list-checkbox/list-checkbox.scss
@@ -6,7 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.4rem;
     outline: none;
   }
 
@@ -20,6 +20,7 @@
     font-family: $font-family_h3;
     font-weight: bold;
     font-size: $font-size_h3;
+    line-height: 1.5rem;
     text-transform: uppercase;
   }
 
