--- a/source/blocks/slider-range/slider-range.scss
+++ b/source/blocks/slider-range/slider-range.scss
@@ -9,6 +9,7 @@
     margin-bottom: 0.5rem;
     font-family: $font-family_h3;
     font-size: $font-size_h3;
+    line-height: 1.5rem;
     text-transform: uppercase;
   }
 
