--- a/source/pages/website/search-room.scss
+++ b/source/pages/website/search-room.scss
@@ -1,28 +1,129 @@
 .search-room {
   width: 100%;
-  padding: 3rem 1.5rem 7rem;
+  padding: 3rem 1.5rem 7.6rem;
   background: $color_back;
   border-bottom: 0.1rem solid $color_main-25;
 
   &__container {
+    position: relative;
     display: grid;
     grid-template-columns: minmax(25rem, 31.1rem) auto;
     max-width: $width-container_main;
     height: 100%;
     margin: auto;
+
+    @media #{$breakpoint_tablet} {
+      grid-template-columns: 5rem auto;
+    }
   }
 
   &__filter {
     width: 100%;
     max-width: 26.6rem;
+    height: 100%;
+    transform-origin: 0 0;
+    transition: all 0.3s ease-in-out;
+
+    @media #{$breakpoint_tablet} {
+      position: absolute;
+      left: 5rem;
+      z-index: 10;
+      max-width: 30rem;
+      padding: 1.5rem;
+      background: $color-back;
+      box-shadow: 1rem 0 1rem -1rem $color_main-25;
+      visibility: hidden;
+      opacity: 0;
+      transform: scaleX(0);
+
+      &_active {
+        border: 0.1rem solid $color_main-25;
+        border-left: 0;
+        border-radius: 0 0.4rem 0.4rem 0;
+        visibility: visible;
+        opacity: 1;
+        transform: scaleX(1);
+        transform-origin: 0 0;
+      }
+    }
+  }
+
+  &__filter-container {
+    position: sticky;
+    top: 1.5rem;
+    bottom: 1.5rem;
+    height: 100vh;
+    overflow-y: auto;
+  }
+
+  &__filter-button {
+    display: none;
+    width: 100%;
+    height: 100%;
+    background: $color-back;
+    border: 0.1rem solid $color_main-25;
+    border-radius: 0.4rem;
+    color: $color_prim;
+    text-align: center;
+    outline: none;
+    cursor: pointer;
+    
+    @media #{$breakpoint_tablet} {
+      display: block;
+
+      &_active {
+        border-right: 0;
+        border-radius: 0.4rem 0 0 0.4rem;
+
+        .material-icons {
+          opacity: 0.5;
+        }
+      }
+    }
+
+    &:focus {
+      box-shadow: 0 0 0.1rem 0.1rem $color_prim;
+    }
+
+    &:hover {
+      background: $color_main-5;
+    }
+
+    .material-icons {
+      position: sticky;
+      top: 0;
+      bottom: 0;
+      padding: 1rem 0;
+      font-size: 4rem;
+    }
   }
 
   &__filter-item {
     margin-bottom: 3rem;
+
+    &_closer {
+      margin-bottom: 2.5rem;
+    }
+
+    &_closest {
+      margin-bottom: 2rem;
+    }
+  }
+
+  &__filter-item-description {
+    margin-top: 1rem;
+    color: $color_main-50;
+    font-family: $font-family_h3;
+    font-size: $font-size_h3;
+    line-height: 1.4rem;
   }
 
   &__results {
     margin-left: 1.5rem;
+
+    @media #{$breakpoint_tablet} {
+      grid-column-start: 2;
+    }
   }
 
   &__results-title {
