Add chart-circle block

--- a/source/styles/style.scss
+++ b/source/styles/style.scss
@@ -13,6 +13,7 @@
 @import '../pages/website/registration';
 @import '../pages/website/sign-in';
 @import '../pages/website/search-room';
+@import '../pages/website/room-details';
 
 @import '../blocks/input-field/input-field';
 @import '../blocks/input-checkbox/input-checkbox';
