Add room-details__reviews element
Also modify comment and button-like blocks to allow initialization
in js using data from a json file.
Plus minor refactoring.

--- a/source/blocks/chart-circle/chart-circle.scss
+++ b/source/blocks/chart-circle/chart-circle.scss
@@ -1,7 +1,8 @@
 @import '../../styles/variables';
 
 $colors_chart-circle: url('#grad1'), url('#grad2'),
-  url('#grad3'), url('#grad4');
+  url('#grad3'), url('#grad4'), #F60000, #FF8C00,
+  #FE0, #4DE94C, #3783FF, #4815AA;
 
 .chart-circle {
   display: flex;
@@ -108,5 +109,4 @@ $colors_chart-circle: url('#grad1'), url('#grad2'),
       transform: scale(1);
     }
   }
-
 }
