--- a/source/styles/style.scss
+++ b/source/styles/style.scss
@@ -21,10 +21,10 @@
 @import '../blocks/input-toggle/input-toggle';
 @import '../blocks/subscription/subscription';
 @import '../blocks/button/button';
-@import '../blocks/button-like/button-like';
+// @import '../blocks/button-like/button-like';
 @import '../blocks/button-info/button-info';
 @import '../blocks/rating/rating';
-@import '../blocks/comment/comment';
+// @import '../blocks/comment/comment';
 @import '../blocks/list-bullet/list-bullet';
 @import '../blocks/list-feature/list-feature';
 @import '../blocks/list-checkbox/list-checkbox';
