--- a/source/pages/website/search-room.pug
+++ b/source/pages/website/search-room.pug
@@ -1,7 +1,7 @@
 extends ./_layout.pug
 
 block append variables
-  - const pageTitle = "Search Room"
+  - const pageTitle = 'Search Room'
 
 block append mixins
   include ../../blocks/dropdown-date/dropdown-date.pug
