--- a/source/blocks/list-feature/list-feature.scss
+++ b/source/blocks/list-feature/list-feature.scss
@@ -9,6 +9,12 @@
     margin-bottom: 2rem;
     padding-bottom: 2rem;
     border-bottom: 0.1rem solid $color_main-10;
+
+    &:last-child {
+      margin-bottom: 0;
+      padding-bottom: 0;
+      border-bottom: 0;
+    }
   }
 
   &__icon {
