--- a/source/pages/website/room-details.scss
+++ b/source/pages/website/room-details.scss
@@ -1,33 +1,151 @@
 @import '../../styles/variables';
+$height_reviews: 30.7rem;
 
 .room-details {
   width: 100%;
-  padding: 16.3rem 1.5rem;
+  background: $color_back;
+  border-bottom: 0.1rem solid $color_main-25;
+
+  &__images {
+    position: relative;
+    display: grid;
+    grid-template-columns: 2.13fr 1fr;
+    grid-template-rows: 24.2rem 24.2rem;
+    grid-template-areas:
+      'item_1 item_2'
+      'item_1 item_3';
+    width: 100%;
+
+    @media #{$breakpoint_tablet} {
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 24.2rem 24.2rem;
+      grid-template-areas:
+        'item_1 item_1'
+        'item_2 item_3';
+    }
+  }
+
+  &__images-item {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+
+    &:first-child {
+      grid-area: item_1;
+    }
+
+    &:hover {
+      opacity: 0.8;
+    }
+  }
+
+  &__wrapper {
+    width: 100%;
+    padding: 7.1rem 1.5rem 6.3rem;
+  }
 
   &__container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1.05fr 42rem;
+    grid-template-rows: 1.64fr $height_reviews 1fr;
+    grid-template-areas:
+      'item_1 item_2 card'
+      'reviews reviews card'
+      'item_3 item_4 card';
+    gap: 3rem;
+    justify-items: start;
+    align-items: start;
+    width: 100%;
     max-width: $width-container_main;
     height: 100%;
     margin: auto;
+
+    @media #{$breakpoint_laptop} {
+      grid-template-columns: 1fr 1.05fr;
+      grid-template-rows: 1.64fr auto $height_reviews 1fr;
+      grid-template-areas:
+        'item_1 item_2'
+        'card card'
+        'reviews reviews'
+        'item_3 item_4';
+      justify-items: center;
+    }
+
+    @media #{$breakpoint_tablet} {
+      grid-template-columns: 1fr;
+      grid-template-rows: auto auto auto $height_reviews auto auto;
+      grid-template-areas:
+        'item_1'
+        'item_2'
+        'card'
+        'reviews'
+        'item_3'
+        'item_4';
+    }
+  }
+
+  &__item {
+    width: 100%;
+    max-width: 34rem;
+
+    @media #{$breakpoint_laptop} {
+      width: auto;
+      max-width: none;
+    }
+
+    &_aligned-left {
+      margin-right: auto;
+    }
+  }
+
+  &__title {
+    line-height: 2.4rem;
+    margin-bottom: 2rem;
+  }
+
+  &__text {
+    color: $color_main-75;
+    line-height: 2.4rem;
+  }
+
+  &__card {
+    grid-area: card;
+    width: 100%;
+    max-width: 38rem;
+    margin-left: auto;
+
+    @media #{$breakpoint_laptop} {
+      margin: 0;
+    }
+  }
+
+  &__reviews {
+    grid-area: reviews;
+    max-height: $height_reviews;
+    margin-top: 0.1rem;
+    overflow-y: auto;
   }
 
   &__reviews-header {
     display: flex;
     justify-content: space-between;
     align-content: center;
-    margin-bottom: 1rem;
     line-height: 2.4rem;
   }
 
   &__reviews-counter {
+    margin-left: 1rem;
     color: $color_main-50;
   }
 
   &__reviews-item {
-    padding: 1rem 0;
+    margin-bottom: 2.3rem;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
 
     &_hidden {
       display: none;
