Improve social links in footer block
Add target="_blank" and rel="noopener noreferrer".
Plus minor refactoring.

--- a/source/styles/style.scss
+++ b/source/styles/style.scss
@@ -42,4 +42,4 @@
 @import '../blocks/card-calendar/card-calendar';
 
 @import '../blocks/header/header';
-@import '../blocks/footer/footer';
+// @import '../blocks/footer/footer';
