--- a/source/blocks/footer/footer.pug
+++ b/source/blocks/footer/footer.pug
@@ -1,7 +1,18 @@
 include ../../blocks/subscription/subscription.pug
 
-mixin footer({ homeHref='#mock-address', mainText='', navbarItems=[], subscription, copyrightText='', twitterHref, facebookHref, instagramHref, style })
+mixin footer(options)
   -
+    const {
+      homeHref='#mock-address',
+      mainText='',
+      navbarItems=[],
+      subscription,
+      copyrightText='',
+      twitterHref,
+      facebookHref,
+      instagramHref,
+      style,
+    } = options;
     const blockName = 'footer';
     const wrapperClass = [blockName];
 
@@ -13,7 +24,8 @@ mixin footer({ homeHref='#mock-address', mainText='', navbarItems=[], subscripti
       div(class=`${blockName}__grid`)
         div(class=`${blockName}__item`)
           a(class=`${blockName}__logo-link`, href=homeHref)
-            img(class=`${blockName}__logo`, src='../../blocks/footer/img/footer__logo.svg', alt='Toxin Logo')
+            img(class=`${blockName}__logo`,
+              src='../../blocks/footer/img/footer__logo.svg', alt='Toxin Logo')
           p(class=`${blockName}__item-text`) #{mainText}
         if (navbarItems)
           nav(class=`${blockName}__navbar`)
@@ -23,13 +35,17 @@ mixin footer({ homeHref='#mock-address', mainText='', navbarItems=[], subscripti
                 ul(class=`${blockName}__navbar-list`)
                   each listItem in item.list
                     li(class=`${blockName}__navbar-list-item`)
-                      a(class=`${blockName}__navbar-link`, href=listItem.href) #{listItem.text}
+                      a(class=`${blockName}__navbar-link`, href=listItem.href)
+                        | #{listItem.text}
         if (subscription)
           div(class=`${blockName}__item`)
             h3(class=`${blockName}__item-title`) #{subscription.title}
             p(class=`${blockName}__item-text`) #{subscription.text}
             div(class=`${blockName}__subscription`)
-              +subscription({ actionLink: subscription.href, placeholderText: subscription.placeholder })
+              +subscription({
+                actionLink: subscription.href,
+                placeholderText: subscription.placeholder,
+              })
 
     div(class=`${blockName}__wrapper`)
       div(class=`${blockName}__container ${blockName}__container_centered`)
@@ -39,11 +55,14 @@ mixin footer({ homeHref='#mock-address', mainText='', navbarItems=[], subscripti
           | #{copyrightText}
         div(class=`${blockName}__social-buttons`)
           if (twitterHref)
-            a(class=`${blockName}__social-button`, href=twitterHref)
+            a(class=`${blockName}__social-button`, href=twitterHref,
+              target='_blank', rel='noopener noreferrer')
               i(class='fab fa-twitter')
           if (facebookHref)
-            a(class=`${blockName}__social-button`, href=facebookHref)
+            a(class=`${blockName}__social-button`, href=facebookHref,
+              target='_blank', rel='noopener noreferrer')
               i(class='fab fa-facebook-square')
           if (instagramHref)
-            a(class=`${blockName}__social-button`, href=instagramHref)
+            a(class=`${blockName}__social-button`, href=instagramHref,
+              target='_blank', rel='noopener noreferrer')
               i(class='fab fa-instagram')
