--- a/source/blocks/card-signin/card-signin.pug
+++ b/source/blocks/card-signin/card-signin.pug
@@ -1,5 +1,5 @@
-include ../../blocks/input-field/input-field.pug
-include ../../blocks/button/button.pug
+include ../input-field/input-field.pug
+include ../button/button.pug
 
 mixin card-signin({ formAction='#mock-address', titleText='Войти', signupHref='#mock-address' })
   -
