--- a/source/blocks/dropdown-date/dropdown-date.pug
+++ b/source/blocks/dropdown-date/dropdown-date.pug
@@ -1,4 +1,4 @@
-include ../../blocks/input-field/input-field.pug
+include ../input-field/input-field.pug
 
 mixin dropdown-date({ labelTexts, inpNames, startAt, endAt, minDate, active=false })
   -
