--- a/source/blocks/footer/footer.pug
+++ b/source/blocks/footer/footer.pug
@@ -1,13 +1,13 @@
-include ../../blocks/subscription/subscription.pug
+include ../subscription/subscription.pug
 
 mixin footer(options)
   -
     const {
-      homeHref='#mock-address',
-      mainText='',
-      navbarItems=[],
+      homeHref = '#mock-address',
+      mainText = '',
+      navbarItems = [],
       subscription,
-      copyrightText='',
+      copyrightText = '',
       twitterHref,
       facebookHref,
       instagramHref,
