--- a/source/blocks/list-checkbox/list-checkbox.pug
+++ b/source/blocks/list-checkbox/list-checkbox.pug
@@ -1,4 +1,4 @@
-include ../../blocks/input-checkbox/input-checkbox.pug
+include ../input-checkbox/input-checkbox.pug
 
 mixin list-checkbox({ listItems=[], listTitle='', expandable=false, active=false })
   -
