--- a/source/blocks/list-radio/list-radio.pug
+++ b/source/blocks/list-radio/list-radio.pug
@@ -1,4 +1,4 @@
-include ../../blocks/input-radio/input-radio.pug
+include ../input-radio/input-radio.pug
 
 mixin list-radio({ radioName='default', listItems=[], listTitle })
   -
