--- a/source/blocks/pagination/pagination.pug
+++ b/source/blocks/pagination/pagination.pug
@@ -1,4 +1,4 @@
-include ../../blocks/button/button.pug
+include ../button/button.pug
 
 mixin pagination({ itemsNumber=1, itemsPerPage=1, baseHref='', addDescription='' })
   -
