--- a/source/blocks/card-room/card-room.pug
+++ b/source/blocks/card-room/card-room.pug
@@ -1,17 +1,24 @@
-include ../../blocks/carousel/carousel.pug
-include ../../blocks/rating/rating.pug
+include ../carousel/carousel.pug
+include ../rating/rating.pug
 
-mixin card-room({ roomHref='#mock-address', roomNumber=0, roomIsLuxury=false, roomPrice=0, roomRating=0, roomReviews=0, crslBaseSrc='', crslImgSrcList=[], isTemplate=false })
+mixin card-room(options)
   -
+    const {
+      roomHref = '#mock-address',
+      roomNumber = 0,
+      roomIsLuxury = false,
+      roomPrice = 0,
+      roomRating = 0,
+      roomReviews = 0,
+      crslBaseSrc = '',
+      crslImgSrcList = [],
+    } = options;
     const blockName = 'card-room';
     const wrapperClass = [blockName, `js-${blockName}`];
     const roomNumberClass = [`${blockName}__header-room-number`, `js-${blockName}__room-number`];
     const roomTypeClass = [`${blockName}__header-room-type`, `js-${blockName}__room-type`];
     const roomPriceClass = [`${blockName}__header-room-price`, `js-${blockName}__room-price`];
     const roomRatingClass = [`${blockName}__footer-room-rating`, `js-${blockName}__room-rating`];
-
-  if (isTemplate)
-    - wrapperClass.push(`${blockName}_hidden`)
 
   div(
     class=wrapperClass,
@@ -21,7 +28,7 @@ mixin card-room({ roomHref='#mock-address', roomNumber=0, roomIsLuxury=false, ro
     data-room-rating=roomRating,
     data-room-reviews=roomReviews
   )
-    div(class=`${blockName}__carousel`)
+    div(class=`${blockName}__carousel js-${blockName}__carousel`)
       +carousel({
         baseSrc: crslBaseSrc,
         imgSrcList: crslImgSrcList,
