--- a/source/blocks/card-signup/card-signup.pug
+++ b/source/blocks/card-signup/card-signup.pug
@@ -1,7 +1,7 @@
-include ../../blocks/input-field/input-field.pug
-include ../../blocks/list-radio/list-radio.pug
-include ../../blocks/input-toggle/input-toggle.pug
-include ../../blocks/button/button.pug
+include ../input-field/input-field.pug
+include ../list-radio/list-radio.pug
+include ../input-toggle/input-toggle.pug
+include ../button/button.pug
 
 mixin card-signup({ formAction='#mock-address', titleText='Регистрация аккаунта', signinHref='#mock-address' })
   -
