--- a/source/blocks/dropdown-list/dropdown-list.pug
+++ b/source/blocks/dropdown-list/dropdown-list.pug
@@ -1,5 +1,5 @@
-include ../../blocks/input-field/input-field.pug
-include ../../blocks/button/button.pug
+include ../input-field/input-field.pug
+include ../button/button.pug
 
 mixin dropdown-list({ listItems=[], labelText, inpName, inpPlaceholder, withButtons=false, active=false })
   -
