--- a/source/blocks/header/header.pug
+++ b/source/blocks/header/header.pug
@@ -1,7 +1,15 @@
-include ../../blocks/button/button.pug
+include ../button/button.pug
 
-mixin header({ homeHref='#mock-address', navbarList=[], loggedIn=false, fstBtn={}, sndBtn={}, account={} })
+mixin header(options)
   -
+    const {
+      homeHref = '#mock-address',
+      navbarList = [],
+      loggedIn = false,
+      fstBtn = {},
+      sndBtn = {},
+      account = {},
+    } = options;
     const blockName = 'header';
     const wrapperClass = [blockName, `js-${blockName}`];
     const navbarBtnClass = [`${blockName}__navbar-button`, `js-${blockName}__navbar-button`];
@@ -15,7 +23,8 @@ mixin header({ homeHref='#mock-address', navbarList=[], loggedIn=false, fstBtn={
   header(class=wrapperClass)
     div(class=`${blockName}__container`)
       a(class=`${blockName}__logo-link`, href=homeHref)
-        img(class=`${blockName}__logo`, src='../../blocks/header/img/header__logo.svg', alt='Toxin Logo')
+        img(class=`${blockName}__logo`,
+          src='../../blocks/header/img/header__logo.svg', alt='Toxin Logo')
       button(class=navbarBtnClass, type='button')
         i(class='material-icons') menu
       nav(class=navbarClass)
