--- a/source/pages/ui-kit/form-elements.scss
+++ b/source/pages/ui-kit/form-elements.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables';
+
 .form-elements {
   display: flex;
   justify-content: space-between;
@@ -7,7 +9,8 @@
   max-width: 1440px;
   margin: auto;
   padding: 14.5rem 14.1rem 14rem 14rem;
-  background: url('../pages/ui-kit/img/ui-kit__logo.svg') 3rem 3rem/4.8rem 4.8rem no-repeat;
+  background: url('./img/ui-kit__logo.svg')
+    3rem 3rem/4.8rem 4.8rem no-repeat;
 
   &__column {
     width: 32rem;
