--- a/source/pages/website/landing-page.scss
+++ b/source/pages/website/landing-page.scss
@@ -1,8 +1,11 @@
+@import '../../styles/variables';
+
 .landing-page {
   width: 100%;
   height: 100%;
   padding: 7rem 1.5rem 2rem;
-  background: $color_back url('../pages/website/img/landing-page__background.png') bottom/cover no-repeat;
+  background: $color_back url('./img/landing-page__background.png')
+    bottom/cover no-repeat;
 
   &__container {
     display: flex;
