--- a/source/pages/website/registration.scss
+++ b/source/pages/website/registration.scss
@@ -1,7 +1,10 @@
+@import '../../styles/variables';
+
 .registration {
   width: 100%;
   padding: 3rem 1.5rem 2.6rem;
-  background: $color_back url('../pages/website/img/registration__background.png') bottom/cover no-repeat;
+  background: $color_back url('./img/registration__background.png')
+    bottom/cover no-repeat;
 
   &__container {
     display: flex;
